* Use high refresh rate
* Refactor initialization logic
* Properly update status bar colors when switching themes