@@ -1,7 +1,7 @@
 name: kuharko
 description: Flutter application for checking out cool recipes
 publish_to: 'none'
-version: 2.1.5+215
+version: 2.1.6+216
 
 #
 # DEPLOYING APP
@@ -35,7 +35,7 @@ dependencies:
   envied: 1.3.1
   flutter_animate: 4.5.2
   flutter_displaymode: 0.7.0
-  flutter_native_splash: 2.4.6
+  flutter_native_splash: 2.4.7
   flutter_spinkit: 5.2.2
   flutter_staggered_animations: 1.1.1
   flutter_web_browser: 0.17.3
